# cipherbench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  REVIEW-FIX.md  REVIEW.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-rule-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-puzzle-generator/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-UAT.md  02-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
.pytest_cache/: .gitignore
cipherbench/: __init__.py  puzzle.py  types.py
cipherbench/adapters/: litellm_adapter.py
cipherbench/cli/: __init__.py  app.py
cipherbench/engine/: __init__.py  layers.py  rule_engine.py
cipherbench/scoring/: __init__.py  report_writer.py  reporter.py  scorer.py
cipherbench/session/: extractor.py  human_runner.py  inspector.py  model_runner.py  prompt.py  schema.py  writer.py
sessions/: 20260530T080356-human-frame.json  20260530T080524-human-frame.json
tests/: conftest.py  test_properties.py
tests/integration/: test_determinism.py
(+63 files in other folders)
