[project]
name = "cipherbench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "typer>=0.12",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cipherbench = "cipherbench.cli.app:app"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cipherbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
